@startuml
title SQL Datatypes // Type Match - Zustandsdiagramm
hide empty description

[*] --> AppStart
state AppStart : HTML geladen: _ghtml_type_match.html
AppStart --> Initialisierung : Script(s) laden
Initialisierung --> DatenLaden : fetch Konfiguration/Leveldaten
DatenLaden --> Bereit : Daten erfolgreich geladen
DatenLaden --> Fehler : Laden fehlgeschlagen
Bereit --> Spielzyklus : Erste Runde starten

state Spielzyklus {
  [*] --> WarteAufEingabe
  WarteAufEingabe --> Auswertung : Nutzerinteraktion
  Auswertung --> Feedback : Regeln pruefen + Score/HUD aktualisieren
  Feedback --> FortschrittPruefen : Weiter / Auto-Fortschritt
  FortschrittPruefen --> Levelwechsel : Naechstes Level laden
  Levelwechsel --> WarteAufEingabe : Level bereit
  FortschrittPruefen --> Abschluss : Letztes Level abgeschlossen
}

Abschluss --> Neustart : Neustart ausloesen
Neustart --> Initialisierung : State zuruecksetzen
Abschluss --> [*] : Sitzung verlassen
Fehler --> [*]

note right of Initialisierung
Quelle: databases/Teil02 FIAE/database/Datenbanken & SQL/Datentypen/_ghtml_type_match.html
JS: _gjs_type_match.js
fetch: _data/_gg01_type_match.json
Merkmale: level-zyklus, neustart, score, fehlerbehandlung
end note
@enduml
